# maui-accounts

./: .gitignore  .gitmodules  Accounts.pro  CMakeLists.txt
android-sources/: AndroidManifest.xml
android-sources/res/values/: strings.xml
android-sources/res/xml/: contacts.xml  contacts_sync_adapter.xml  mauikit_authenticator.xml
android-sources/src/org/mauikit/accounts/: MainActivity.java
android-sources/src/org/mauikit/accounts/dav/: CardDAV.java
android-sources/src/org/mauikit/accounts/dav/dto/: CardDAVResponseItem.java  Contact.java
android-sources/src/org/mauikit/accounts/dav/utils/: NetworkHelper.java  XMLHelper.java
android-sources/src/org/mauikit/accounts/syncadapter/: ContactsSyncAdapter.java  ContactsSyncService.java  MauiKitAuthenticator.java  MauikitAuthenticatorService.java  StubContactsProvider.java
android-sources/src/org/mauikit/accounts/utils/: Constants.java  Utils.java
src/: main.cpp  maui_accounts.desktop
src/entities/: Constants.hpp  LocalContacts.cpp  LocalContacts.hpp  SyncManager.cpp  SyncManager.hpp  SyncThread.hpp
src/qml/: Toast.qml  main.qml  metadata.desktop  qml.qrc
src/qml/contents/ui/: ProgressDialog.qml  main.qml  qml.qrc
src/viewcontrollers/: MainViewController.cpp  MainViewController.hpp
